--- a/RecipeApplication/Client/Shared/MainLayout.razor
+++ b/RecipeApplication/Client/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <NavLink href="/">Insert Logo here :)</NavLink>
+        <NavLink href="/"><img src="/images/logo.svg" /></NavLink>
     </div>
     <div class="content px-4">
         @Body
