--- a/SearchBox/SearchBox/SearchBox.razor
+++ b/SearchBox/SearchBox/SearchBox.razor
@@ -25,8 +25,8 @@
         </div>
     </div>
     <div class="keyword-buttons">
-        <a class="keyword-search" @onclick="@(wordHandler.Search)">Search</a>
-        <a class="keyword-search keyword-reset" @onclick="@(wordHandler.Reset)">Reset</a>
+        <a class="keyword-button keyword-search" @onclick="@(wordHandler.Search)">Search</a>
+        <a class="keyword-button keyword-reset" @onclick="@(wordHandler.Reset)">Reset</a>
     </div>
 </div>
 @code{
@@ -56,7 +56,7 @@
             OnReset = (async ()=> { await OnSearch(WordList.ToList()); });
         }
         if (ResultData is ISearchModel resultData && resultData?.Keywords != null) {
-            wordHandler.SetRange(resultData.Keywords);
+            _wordModel.SetRange(resultData.Keywords);
         }
     }
     private async Task Search(IList<string> data)
