--- a/RecipeApplication/Client/Pages/Recipe.razor
+++ b/RecipeApplication/Client/Pages/Recipe.razor
@@ -18,7 +18,7 @@
 }
 else
 {
-    <a href="/" class="navigator">Back</a>
+    <a href="/" class="navigator"><img src="images/back.svg" /></a>
     <div class="recipe">
     <h2>@recipe.FoodName</h2>
     <h3>Ingredients</h3>
