removed unnecessary two-way bindings

--- a/RecipeApplication/Client/Components/Search.razor
+++ b/RecipeApplication/Client/Components/Search.razor
@@ -18,7 +18,7 @@ else
 
     </div>
     <div class="result-list">
-        <ResultBox @bind-ResultData="model">
+        <ResultBox ResultData="model">
             <Default>
                 <div class="result-empty">
                     <p>What ingredients do you have? Leave yours, we suggest!</p>
